--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+  margin:0;
+}
+
+
+
 body {
   margin:0;
   -webkit-user-select: none;
@@ -7,51 +13,44 @@ body {
 }
 
 
-#left{
-  width: 50px;
-  height: 50px;
+#m1{
+  width:50px;
+  height:50px; 
   position: absolute;
-  top: 30%;
-  left: 50%;
-  background: transparent;
-  border: none;
-  color:white;
+  top:50%; left:75%;
 }
 
-#right{
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: 30%;
-  left: 70%;
-  background: transparent;
-  border: none;
-  color:white;
-}
 
-#move{
-  width: 50px;
-  height: 50px;
+#m2{
+  width:50px;
+  height:50px; 
   position: absolute;
-  top: 20%;
-  left:60%;
-  background: transparent;
-  border: none;
-  color:white;
-}
-#down1{
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: 40%;
-  left:60%;
-  background: transparent;
-  border: none;
-  color:white;
+  top:60%; left:55%;
 }
 
 
 
 
+#m3{
+  width:50px;
+  height:50px; 
+  position: absolute;
+  top:60%; left:75%;
+}
 
 
+#m4{
+  width:50px;
+  height:50px; 
+  position: absolute;
+  top:75%; left:55%;
+}
+
+
+
+#m5{
+  width:50px;
+  height:50px; 
+  position: absolute;
+  top:75%; left:75%;
+}
