--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   -webkit-user-select: none;
   align-items: center;
   justify-content: center;
-  background-color"red";
+  background-color:red;
   
 }
 
