--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ body {
   position: absolute;
   top:75%; left:75%;
 }
+
+
+#m6{
+  width:50px;
+  height:50px; 
+  position: absolute;
+  top:1%; left:2%;
+}
 #fullscreenIcon {
   cursor: pointer;
   font-size: 32px;
